<resources>
    <string name="app_name">PlayersArena</string>
    <string name="todo">TODO</string>
    <string name="signup">SignUp</string>
    <string name="paytm_gpay_phonepe">Paytm/Gpay/PhonePe</string>
    <string name="whatsapp_no">WhatsApp No.</string>
    <string name="Signup">SignUp</string>
    <string name="email">Email</string>
    <string name="in_game_name">In Game Name</string>
    <string name="full_name">Full Name</string>
    <string name="signup3">Signup</string>
    <string name="password">Password</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="ADMOB_ADS_UNIT_ID">ca-app-pub-3940256099942544/2247696110</string>
    <string name="ad_attribution">Ad</string>

</resources>