<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbg">

    <com.google.android.gms.ads.AdView
        android:id="@+id/SignupBanner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-8437463521260836/8089907073"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></com.google.android.gms.ads.AdView>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:text="@string/signup"
        android:textColor="#94EFF1"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/ed_fullname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ed_fullname"
        android:layout_width="216dp"
        android:layout_height="0dp"
        android:layout_marginTop="116dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textColor="#EDE1E1"
        android:textColorHint="#E8BDBD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_ingamename"
        android:layout_width="216dp"
        android:layout_height="47dp"
        android:layout_marginTop="3dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="InGameName"
        android:inputType="textPersonName"
        android:textColor="#F3E5E5"
        android:textColorHint="#E3CBCB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_fullname" />

    <EditText
        android:id="@+id/ed_email"
        android:layout_width="216dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#F3E9E9"
        android:textColorHint="#EDDDDD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_ingamename" />

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="216dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#F8EEEE"
        android:textColorHint="#E6D5D5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_email" />

    <EditText
        android:id="@+id/ed_whatsapp"
        android:layout_width="216dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/whatsapp_no"
        android:maxLength="10"

        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#E3D5D5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_password" />

    <EditText
        android:id="@+id/ed_gpay"
        android:layout_width="216dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/paytm_gpay_phonepe"
        android:maxLength="10"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#DDD2D2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_whatsapp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="register"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_gpay" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="103dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:onClick="login"
        android:text="Login Here"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.005" />


    <com.google.android.gms.ads.AdView
        android:id="@+id/SignupBanner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-8437463521260836/3959090371"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>

</androidx.constraintlayout.widget.ConstraintLayout>



